force-app/main/default/objects/Career_Constraints__c/Career_Constraints__c.object-meta.xml
<CustomObject>
    <label>Career Constraints</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Career Constraints Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Career Constraints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>