force-app/main/default/objects/Career_Constraints__c/fields/Company_Size_Preference__c.field-meta.xml
<CustomField>
    <fullName>Company_Size_Preference__c</fullName>
    <label>Company Size Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>