force-app/main/default/objects/Career_Constraints__c/fields/Compensation_Type__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Type__c</fullName>
    <label>Compensation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>