force-app/main/default/objects/Career_Constraints__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Career Constraints</relationshipLabel>
    <relationshipName>Career_Constraints</relationshipName>
    <type>Lookup</type>
</CustomField>