force-app/main/default/objects/Career_Constraints__c/fields/Culture_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Culture_Preferences__c</fullName>
    <label>Culture Preferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>