force-app/main/default/objects/Career_Constraints__c/fields/Deal_Breakers__c.field-meta.xml
<CustomField>
    <fullName>Deal_Breakers__c</fullName>
    <label>Deal Breakers</label>
    <type>TextArea</type>
</CustomField>