force-app/main/default/objects/Career_Constraints__c/fields/Flexibility_Importance__c.field-meta.xml
<CustomField>
    <fullName>Flexibility_Importance__c</fullName>
    <label>Flexibility Importance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not important</fullName>
            </value>
            <value>
                <fullName>Slightly important</fullName>
            </value>
            <value>
                <fullName>Moderately important</fullName>
            </value>
            <value>
                <fullName>Very important</fullName>
            </value>
            <value>
                <fullName>Extremely important</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>