force-app/main/default/objects/Career_Constraints__c/fields/Industry_Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Industry_Exclusions__c</fullName>
    <label>Industry Exclusions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>