force-app/main/default/objects/Career_Constraints__c/fields/Industry_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Industry_Preferences__c</fullName>
    <label>Industry Preferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>