force-app/main/default/objects/Career_Constraints__c/fields/Max_Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Max_Hours_Per_Week__c</fullName>
    <label>Max Hours Per Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>