force-app/main/default/objects/Career_Constraints__c/fields/Max_Salary__c.field-meta.xml
<CustomField>
    <fullName>Max_Salary__c</fullName>
    <description>Max Salary In ($)</description>
    <inlineHelpText>Max Salary In ($)</inlineHelpText>
    <label>Max Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>