force-app/main/default/objects/Career_Constraints__c/fields/Min_Salary__c.field-meta.xml
<CustomField>
    <fullName>Min_Salary__c</fullName>
    <description>Minimum Salary In ($)</description>
    <label>Min Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>