force-app/main/default/objects/Career_Constraints__c/fields/Preferred_Locations__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Locations__c</fullName>
    <label>Preferred Locations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>