force-app/main/default/objects/Career_Constraints__c/fields/Remote_Work_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Remote_Work_Requirement__c</fullName>
    <label>Remote Work Requirement</label>
    <type>TextArea</type>
</CustomField>