force-app/main/default/objects/Career_Constraints__c/fields/Risk_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Risk_Tolerance__c</fullName>
    <label>Risk Tolerance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>High growth</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>Very stable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>