force-app/main/default/objects/Career_Constraints__c/fields/Travel_Willingness__c.field-meta.xml
<CustomField>
    <fullName>Travel_Willingness__c</fullName>
    <label>Travel Willingness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Occasional</fullName>
            </value>
            <value>
                <fullName>Frequent</fullName>
            </value>
            <value>
                <fullName>Extensive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>